<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/background"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_top"
        android:contentDescription="@string/ivDescriptionL"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:text="@string/tvLoginTitle"
        android:textSize="32sp"
        android:fontFamily="@font/roboto_black"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.5"
        >


        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvLoginEmail"
            android:fontFamily="@font/roboto_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:hint="@string/etLoginCorreo"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/grey"
            android:ems="10"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_bg"
            android:padding="12dp"
            android:textSize="18sp"
            android:maxWidth="488dp"
            />

        <TextView
            android:id="@+id/tvPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tvLoginPass"
            android:fontFamily="@font/roboto_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/etClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:drawableStart="@drawable/custom_pass_icon"
            android:drawablePadding="12dp"
            android:hint="@string/etLoginClave"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/grey"
            android:ems="10"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_bg"
            android:padding="12dp"
            android:textSize="18sp"
            android:maxWidth="488dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:text="@string/btnLoginIngresar"
            android:background="@drawable/button_bg"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_bold"
            android:maxWidth="320dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvAskL"
                android:fontFamily="@font/roboto_medium"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/tvCrearCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/tvRedirectL"
                android:fontFamily="@font/roboto_bold"
                android:textSize="16sp"
                />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>