<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFirstFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        >

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fTvRegisterName"
            android:fontFamily="@font/roboto_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:autofillHints="name"
            android:drawableStart="@drawable/custom_user_info_icon"
            android:drawablePadding="12dp"
            android:hint="@string/fEtRegisterNombre"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/grey"
            android:ems="10"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_bg"
            android:padding="12dp"
            android:textSize="18sp"
            android:maxWidth="488dp"
            />

        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/fTvRegisterLastName"
            android:fontFamily="@font/roboto_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/etApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="name"
            android:drawableStart="@drawable/custom_user_info_icon"
            android:drawablePadding="12dp"
            android:hint="@string/fEtRegisterApellido"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/grey"
            android:ems="10"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_bg"
            android:padding="12dp"
            android:textSize="18sp"
            android:maxWidth="488dp"
            />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/fTvRegisterPhone"
            android:fontFamily="@font/roboto_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:autofillHints="phone"
            android:drawableStart="@drawable/custom_phone_icon"
            android:drawablePadding="12dp"
            android:hint="@string/fEtRegisterTelefono"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/grey"
            android:ems="10"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_bg"
            android:padding="12dp"
            android:textSize="18sp"
            android:maxWidth="488dp"
            />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/fTvRegisterAddress"
            android:fontFamily="@font/roboto_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/etDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="none"
            android:drawableStart="@drawable/custom_map_icon"
            android:drawablePadding="12dp"
            android:hint="@string/fEtRegisterDireccion"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/grey"
            android:ems="10"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_bg"
            android:padding="12dp"
            android:textSize="18sp"
            android:maxWidth="488dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:text="@string/fBtnSiguiente"
            android:background="@drawable/button_bg_on"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_black"
            android:maxWidth="320dp"
            />


    </LinearLayout>


</FrameLayout>