<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterSecondFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        >

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sTvRegisterEmail"
            android:fontFamily="@font/roboto_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:hint="@string/sEtRegisterCorreo"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/grey"
            android:ems="10"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_bg"
            android:padding="12dp"
            android:textSize="18sp"
            android:maxWidth="488dp"
            />

        <TextView
            android:id="@+id/tvPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/sTvRegisterPass"
            android:fontFamily="@font/roboto_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/etClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:drawableStart="@drawable/custom_pass_icon"
            android:drawablePadding="12dp"
            android:hint="@string/sEtRegisterClave"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/grey"
            android:ems="10"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_bg"
            android:padding="12dp"
            android:textSize="18sp"
            android:maxWidth="488dp"
            />

        <TextView
            android:id="@+id/tRepeatPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/sTvRegisterRepeatPass"
            android:fontFamily="@font/roboto_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            />


        <EditText
            android:id="@+id/etRepetirClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:drawableStart="@drawable/custom_pass_icon"
            android:drawablePadding="12dp"
            android:hint="@string/sEtRegisterRepetirClave"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/grey"
            android:ems="10"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_bg"
            android:padding="12dp"
            android:textSize="18sp"
            android:maxWidth="488dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAnterior"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:text="@string/sBtnAnterior"
            android:background="@drawable/button_bg_on"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_black"
            android:maxWidth="320dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:text="@string/sBtnRegistrar"
            android:background="@drawable/button_bg"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_bold"
            android:maxWidth="320dp"
            />

    </LinearLayout>

</FrameLayout>