<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.EditProfileAdminFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/ivAtras"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_arrow_circle_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitleEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adminFepTitulo"
            android:textSize="24sp"
            android:fontFamily="@font/roboto_black"
            app:layout_constraintBottom_toBottomOf="@+id/ivAtras"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivAtras" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleEditProfile">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="32dp">

                <TextView
                    android:id="@+id/tvNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/adminFepNombre"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_text_bg"
                    android:ems="10"
                    android:hint="@string/adminFepComletar"
                    android:inputType="text"
                    android:padding="12dp" />

                <TextView
                    android:id="@+id/tvApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/adminFepApellido"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_text_bg"
                    android:ems="10"
                    android:hint="@string/adminFepComletar"
                    android:inputType="text"
                    android:padding="12dp" />

                <TextView
                    android:id="@+id/tvTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/adminFepTelefono"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_text_bg"
                    android:ems="10"
                    android:hint="@string/adminFepComletar"
                    android:inputType="text"
                    android:padding="12dp" />

                <TextView
                    android:id="@+id/tvDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/adminFepDireccion"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_text_bg"
                    android:ems="10"
                    android:hint="@string/adminFepComletar"
                    android:inputType="text"
                    android:padding="12dp" />

                <TextView
                    android:id="@+id/tvCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/adminFepCorreo"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_text_bg"
                    android:ems="10"
                    android:hint="@string/adminFepComletar"
                    android:inputType="text"
                    android:padding="12dp" />

                <TextView
                    android:id="@+id/tvClave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/adminFepClave"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etClave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_text_bg"
                    android:ems="10"
                    android:hint="@string/adminFepComletar"
                    android:inputType="text"
                    android:padding="12dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnActualizarPerfil"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/button_bg"
                    android:fontFamily="@font/roboto_bold"
                    android:maxWidth="320dp"
                    android:text="@string/adminFepBtnAcualizar"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>